# trier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml
src/trycatch/: __init__.py
tests/: test_trier.py  test_trycatch.py
