[tool.poetry]
name = "trycatch"
version = "1.0.0"
description = "Utility wrapper to handle exceptions."
authors = ["Arnold Anthonypillai <arnoldbronson16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.19.0"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
